<resources>
    <string name="app_name">Registration Form</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email_address">Email address</string>
    <string name="phone_number">Phone number</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="your_account_details">Your account details</string>
    <string name="join_us">Join Us</string>
    <string name="create_a_free_account">Create a free account</string>
</resources>